--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hola Mundo</h1>
+<div class="d-flex">
+  <!--Sidebar-->
+  <shared-sidebar></shared-sidebar>
+
+  <gifs-home-page class="flex-fill"></gifs-home-page>
+  <!--HomePage-->
+</div>
